fixed minor UI overflow issues

--- a/src/styles/Entry.module.css
+++ b/src/styles/Entry.module.css
@@ -41,8 +41,17 @@ a{
     box-shadow: 0px 10px 30px 3px rgba(0, 0, 0, 0.5);
     transition: 0.3s all ease;
     width: 550px;
-    height: 100px;
-    overflow: hidden;
+    height: 100px;/*
+    overflow: hidden;*/
+}
+.preview a{
+  flex: 5;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.previewBtn{
+  text-align: center;
+  flex: 1;
 }
 .preview:hover{
     box-shadow: 0px 10px 10px 5px rgba(0, 0, 0, 0.5);
