--- a/src/styles/preview.module.css
+++ b/src/styles/preview.module.css
@@ -25,6 +25,8 @@
     box-shadow:2px 5px 5px;
     padding: 1%;
     font-size: larger;
+    height: 50px;
+    overflow-y: scroll;
 }
 .TextAreaGrouping{
     margin: 50px 0;
@@ -49,6 +51,10 @@
       min-height: 95vh;
       max-width: 95%;
     }  
+    .textarea{
+      overflow-x: hidden;
+      overflow-y: scroll;
+    }
   }
   @media (min-width: 1025px) {
     .wrapper{
